--- a/AppendList2/app/src/main/res/layout/simple_list.xml
+++ b/AppendList2/app/src/main/res/layout/simple_list.xml
@@ -21,8 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
         android:ems="10"
+        android:hint="add to task"
         android:inputType="textPersonName"
-        android:text="To do task"
         app:layout_constraintBottom_toTopOf="@+id/_dynamic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
