--- a/Login_Page/app/src/main/res/layout/activity_main.xml
+++ b/Login_Page/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:fontFamily="sans-serif-black"
-        android:text="Login"
+        android:text="Login:"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
